# kontakion

./: ChangeLog.md  LICENSE  kontakion.cabal
src/: Main.hs
src/Kontakion/: MIDI.hs  Player.hs  Synth.hs  SynthFunc.hs  SynthParams.hs
